generator client {
  provider        = "prisma-client-js"
  previewFeatures = ["driverAdapters"]
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model Category {
  id            String        @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  name          String
  slug          String        @unique
  createdAt     DateTime      @default(now()) @db.Timestamp(6)
  subCategories SubCategory[]
  sizes         Size[]
  products      Product[]
}

model SubCategory {
  id         String    @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  name       String
  slug       String    @unique
  categoryId String    @db.Uuid
  createdAt  DateTime  @default(now()) @db.Timestamp(6)
  category   Category  @relation(fields: [categoryId], references: [id], onDelete: Cascade)
  products   Product[]
}

model Size {
  id         String           @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  name       String
  categoryId String           @db.Uuid
  category   Category         @relation(fields: [categoryId], references: [id], onDelete: Cascade)
  variants   ProductVariant[]
}

model Brand {
  id        String    @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  name      String
  slug      String    @unique
  createdAt DateTime  @default(now()) @db.Timestamp(6)
  products  Product[]
}

model Product {
  id              String           @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  name            String
  slug            String           @unique(map: "product_slug_idx")
  categoryId      String           @db.Uuid
  category        Category         @relation(fields: [categoryId], references: [id], onDelete: Restrict)
  subCategoryId   String?          @db.Uuid
  subCategory     SubCategory?     @relation(fields: [subCategoryId], references: [id], onDelete: SetNull)
  images          String[]
  brandId         String           @db.Uuid
  brand           Brand            @relation(fields: [brandId], references: [id], onDelete: Restrict)
  sellerId        String?          @db.Uuid
  seller          User?            @relation(fields: [sellerId], references: [id], onDelete: SetNull)
  description     String
  rating          Decimal          @default(0) @db.Decimal(3, 2)
  numReviews      Int              @default(0)
  isFeatured      Boolean          @default(false)
  banner          String?
  hasColorVariants Boolean         @default(false)
  createdAt       DateTime         @default(now()) @db.Timestamp(6)
  OrderItem       OrderItem[]
  Review          Review[]
  variants        ProductVariant[]
  colors          ProductColor[]
  prices          Price[]
  promoBanners    PromoBanner[]
}

model Color {
  id        String   @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  name      String   @unique
  hex       String
  createdAt DateTime @default(now()) @db.Timestamp(6)

  productColors ProductColor[]
}

// Fase 2: Métodos de pago soportados para el dual pricing
enum PaymentMethod {
  CASH            // Efectivo / transferencia
  MERCADOPAGO
}

model Price {
  id            String        @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  productId     String        @db.Uuid
  paymentMethod PaymentMethod
  value         Decimal       @db.Decimal(12, 2)
  createdAt     DateTime      @default(now()) @db.Timestamp(6)

  product Product @relation(fields: [productId], references: [id], onDelete: Cascade)

  @@unique([productId, paymentMethod])
}

model ProductColor {
  id        String   @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  productId String   @db.Uuid
  colorId   String   @db.Uuid
  images    String[] @default([])
  order     Int      @default(0)
  createdAt DateTime @default(now()) @db.Timestamp(6)

  product  Product          @relation(fields: [productId], references: [id], onDelete: Cascade)
  color    Color            @relation(fields: [colorId], references: [id], onDelete: Restrict)
  variants ProductVariant[]

  @@unique([productId, colorId], map: "productcolor_product_color_idx")
}

model ProductVariant {
  id        String  @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  productId String  @db.Uuid
  sizeId    String? @db.Uuid
  colorId   String? @db.Uuid
  stock     Int     @default(0)

  product      Product      @relation(fields: [productId], references: [id], onDelete: Cascade)
  size         Size?        @relation(fields: [sizeId], references: [id], onDelete: Restrict)
  productColor ProductColor? @relation(fields: [colorId], references: [id], onDelete: Restrict)

  @@unique([productId, sizeId, colorId], map: "productvariant_product_size_color_idx")
}

model User {
  id             String           @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  name           String           @default("NO_NAME")
  email          String           @unique(map: "user_email_idx")
  emailVerified  DateTime?        @db.Timestamp(6)
  image          String?
  password       String?
  role           String           @default("user")
  address        Json?            @db.Json
  paymentMethod  String?
  dni            String?          @unique(map: "user_dni_idx")
  phone          String?
  commissionRate Float?
  createdAt      DateTime         @default(now()) @db.Timestamp(6)
  updatedAt      DateTime         @updatedAt
  account        Account[]
  session        Session[]
  Cart           Cart[]
  Order          Order[]
  Review         Review[]
  products       Product[]
  PromoCodeUsage PromoCodeUsage[]
}

model Account {
  userId            String  @db.Uuid
  type              String
  provider          String
  providerAccountId String
  refresh_token     String?
  access_token      String?
  expires_at        Int?
  token_type        String?
  scope             String?
  id_token          String?
  session_state     String?

  createdAt DateTime @default(now()) @db.Timestamp(6)
  updatedAt DateTime @updatedAt

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@id([provider, providerAccountId])
}

model Session {
  sessionToken String   @id
  userId       String   @db.Uuid
  expires      DateTime @db.Timestamp(6)
  user         User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  createdAt DateTime @default(now()) @db.Timestamp(6)
  updatedAt DateTime @updatedAt
}

model VerificationToken {
  identifier String
  token      String
  expires    DateTime

  @@id([identifier, token])
}

model PasswordResetToken {
  token     String   @id @unique
  email     String
  expiresAt DateTime @db.Timestamp(6)
  createdAt DateTime @default(now()) @db.Timestamp(6)
}

model Cart {
  id            String   @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  userId        String?  @db.Uuid
  sessionCartId String
  items         Json[]   @default([]) @db.Json
  itemsPrice    Decimal  @db.Decimal(12, 2)
  totalPrice    Decimal  @db.Decimal(12, 2)
  shippingPrice Decimal  @db.Decimal(12, 2)
  taxPrice      Decimal  @db.Decimal(12, 2)
  createdAt     DateTime @default(now()) @db.Timestamp(6)
  updatedAt     DateTime @updatedAt
  user          User?    @relation(fields: [userId], references: [id], onDelete: Cascade)
}

model CartRecovery {
  id          String    @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  cartId      String    @db.Uuid
  email       String
  token       String    @unique
  sentAt      DateTime  @default(now()) @db.Timestamp(6)
  recoveredAt DateTime? @db.Timestamp(6)
  createdAt   DateTime  @default(now()) @db.Timestamp(6)
}

model PromoBanner {
  id              String    @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  image           String
  title           String
  subtitle        String?
  linkLabel       String?
  discountPercent Float?
  order           Int       @default(0)
  isActive        Boolean   @default(true)
  startsAt        DateTime? @db.Timestamp(6)
  endsAt          DateTime? @db.Timestamp(6)
  createdAt       DateTime  @default(now()) @db.Timestamp(6)
  products        Product[]
}

model Order {
  id               String      @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  userId           String      @db.Uuid
  shippingAddress  Json        @db.Json
  paymentMethod    String
  paymentResult    Json?       @db.Json
  itemsPrice       Decimal     @db.Decimal(12, 2)
  shippingPrice    Decimal     @db.Decimal(12, 2)
  taxPrice         Decimal     @db.Decimal(12, 2)
  totalPrice       Decimal     @db.Decimal(12, 2)
  promoCode        String?
  discountPrice    Decimal?    @db.Decimal(12, 2)
  bannerId         String?     @db.Uuid
  bannerDiscount   Decimal?    @db.Decimal(12, 2)
  isPaid           Boolean     @default(false)
  paidAt           DateTime?   @db.Timestamp(6)
  isDelivered      Boolean     @default(false)
  deliveredAt      DateTime?   @db.Timestamp(6)
  shippingStatus   String?     @default("Pendiente")
  shippingNotes    String?
  createdAt        DateTime    @default(now()) @db.Timestamp(6)
  receiptUrl       String?
  mpPaymentId      String?     @unique
  expiresAt        DateTime?   @db.Timestamp(6)
  sellerId         String?     @db.Uuid
  commissionAmount Decimal?    @db.Decimal(12, 2)
  user             User        @relation(fields: [userId], references: [id], onDelete: Cascade)
  orderitems       OrderItem[]
}

model OrderItem {
  orderId        String   @db.Uuid
  productId      String   @db.Uuid
  size           String?  // We'll just store the string representation of the size for historical purposes
  qty            Int
  // Fase 2: precio final aplicado al item (según método de pago elegido en checkout)
  priceUsed      Decimal  @db.Decimal(12, 2)
  // Fase 2: método de pago del que se derivó `priceUsed` (audit trail)
  paymentMethod  PaymentMethod
  name           String
  slug           String
  image          String
  // Fase 1: snapshot del color (mismo enfoque que `size` — texto histórico)
  productColorId String?
  colorName      String?
  colorHex       String?
  order     Order   @relation(fields: [orderId], references: [id], onDelete: Cascade)
  product   Product @relation(fields: [productId], references: [id], onDelete: Cascade)

  // the PK should now include size to differentiate same product with different sizes
  // wait, a better way is a surrogate ID or just use uuid. Let's keep a composite but add a unique index if needed.
  // Actually, OrderItem id can just be a UUID to simplify. Let's change the PK to a UUID.
  id String @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid

  @@unique([orderId, productId, size, productColorId], map: "orderitems_order_product_size_idx")
}

model Review {
  id                 String   @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  userId             String   @db.Uuid
  productId          String   @db.Uuid
  rating             Int
  title              String
  description        String
  isVerifiedPurchase Boolean  @default(true)
  createdAt          DateTime @default(now()) @db.Timestamp(6)
  product            Product  @relation(fields: [productId], references: [id], onDelete: Cascade)
  user               User     @relation(fields: [userId], references: [id], onDelete: Cascade)
}

model Setting {
  key   String @id
  value String
}

model PromoCode {
  id                           String           @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  code                         String           @unique
  description                  String?
  discountPercentMercadoPago   Decimal?         @db.Decimal(5, 2)
  discountPercentTransferencia Decimal?         @db.Decimal(5, 2)
  isActive                     Boolean          @default(true)
  startsAt                     DateTime?        @db.Timestamp(6)
  endsAt                       DateTime?        @db.Timestamp(6)
  maxUsesPerUser               Int?
  createdAt                    DateTime         @default(now()) @db.Timestamp(6)
  updatedAt                    DateTime         @default(now()) @updatedAt
  usageHistory                 PromoCodeUsage[]
}

model PromoCodeUsage {
  id          String   @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  promoCodeId String   @db.Uuid
  userId      String   @db.Uuid
  orderId     String   @db.Uuid
  usedAt      DateTime @default(now()) @db.Timestamp(6)

  promoCode PromoCode @relation(fields: [promoCodeId], references: [id], onDelete: Cascade)
  user      User      @relation(fields: [userId], references: [id], onDelete: Cascade)
}
