// ============================================================================
// AZ-Store · Database Schema (DBML)
// Estado: Fase 1 (colores + variantes por talle/color) y Fase 2 (dual pricing)
// Para regenerar automáticamente en el futuro, considerar:
//   - https://github.com/notiz-dev/prisma-dbml-generator
//   - https://github.com/holistics/dbml
// ============================================================================

Project az_store {
  database_type: 'PostgreSQL'
  Note: 'AZ-Store · esquema con Fase 1 y Fase 2 aplicadas'
}

// ----------------------------------------------------------------------------
// Catálogo
// ----------------------------------------------------------------------------

Table Category {
  id String [pk, default: `gen_random_uuid()`, not null]
  name String [not null]
  slug String [unique, not null]
  created_at timestamp [not null, default: `now()`]

  Note: 'Categorías principales del catálogo (Pantalón, Remera, Accesorios...)'
}

Table SubCategory {
  id String [pk, default: `gen_random_uuid()`, not null]
  name String [not null]
  slug String [unique, not null]
  category_id String [not null, ref: > Category.id]
  created_at timestamp [not null, default: `now()`]

  indexes {
    category_id [name: 'subcategory_category_idx']
  }
  Note: 'Sub-categorías (Jeans, Joggers...) — viven dentro de una Category'
}

Table Size {
  id String [pk, default: `gen_random_uuid()`, not null]
  name String [not null]
  category_id String [not null, ref: > Category.id]

  Note: 'Talles por categoría (S/M/L para Remeras, 38/40/42 para Pantalones...)'
}

Table Brand {
  id String [pk, default: `gen_random_uuid()`, not null]
  name String [not null]
  slug String [unique, not null]
  created_at timestamp [not null, default: `now()`]

  Note: 'Marcas de los productos'
}

// ----------------------------------------------------------------------------
// Producto y sus variantes
// ----------------------------------------------------------------------------

Table Product {
  id String [pk, default: `gen_random_uuid()`, not null]
  name String [not null]
  slug String [unique, not null]
  category_id String [not null, ref: > Category.id]
  sub_category_id String [ref: > SubCategory.id]
  // images: Postgres text[] (array de URLs)
  images text[] [not null]
  brand_id String [not null, ref: > Brand.id]
  seller_id String [ref: > User.id]
  description text [not null]
  // Fase 2: el campo `price` se eliminó. Los precios viven en Price (uno por método de pago).
  rating decimal [not null, default: 0]
  num_reviews integer [not null, default: 0]
  is_featured boolean [not null, default: false]
  banner text
  // Fase 1: opt-in para variantes de color
  has_color_variants boolean [not null, default: false]
  created_at timestamp [not null, default: `now()`]

  indexes {
    slug [unique, name: 'product_slug_idx']
  }
  Note: 'Producto del catálogo. El stock NO vive acá — vive en ProductVariant. Los precios tampoco — viven en Price'
}

Table Color {
  id String [pk, default: `gen_random_uuid()`, not null]
  name String [unique, not null]
  // hex con formato "#dc2626"
  hex text [not null]
  created_at timestamp [not null, default: `now()`]

  Note: 'Paleta de colores global del catálogo. Reusable entre productos (mismo "Azul" para varios jeans, remeras, etc.)'
}

// Fase 2: enum interno de dual pricing. Coincide con Prisma `PaymentMethod`.
Enum PaymentMethod {
  CASH
  MERCADOPAGO
}

Table Price {
  id String [pk, default: `gen_random_uuid()`, not null]
  product_id String [not null, ref: > Product.id]
  payment_method PaymentMethod [not null]
  // decimal(12, 2) — formato moneda ARS
  value decimal [not null]
  created_at timestamp [not null, default: `now()`]

  indexes {
    (product_id, payment_method) [unique]
  }
  Note: 'Fase 2: dual pricing. Un producto tiene exactamente dos filas (CASH + MERCADOPAGO). El precio aplicado al item se snapshot-ea en OrderItem.priceUsed'
}

Table ProductColor {
  id String [pk, default: `gen_random_uuid()`, not null]
  product_id String [not null, ref: > Product.id]
  color_id String [not null, ref: > Color.id]
  // images: galería específica de este color para este producto
  images text[] [not null, default: `'{}'::text[]`]
  // orden de aparición en la PDP (1, 2, 3...)
  order integer [not null, default: 0]
  created_at timestamp [not null, default: `now()`]

  indexes {
    (product_id, color_id) [unique, name: 'productcolor_product_color_idx']
  }
  Note: 'Pivot producto-color con galería propia. Un producto "usa" varios colores y cada uno tiene sus fotos'
}

Table ProductVariant {
  id String [pk, default: `gen_random_uuid()`, not null]
  product_id String [not null, ref: > Product.id]
  // size_id y color_id son ambos opcionales. NULL = "sin talle" o "sin color"
  size_id String [ref: > Size.id]
  color_id String [ref: > ProductColor.id]
  stock integer [not null, default: 0]

  indexes {
    (product_id, size_id, color_id) [unique, name: 'productvariant_product_size_color_idx']
  }
  Note: 'Stock por (talle?, color?). Ambos opcionales. NULL en Prisma cuenta como valor único en uniques, lo que permite múltiples variants "sin talle" o "sin color"'
}

// ----------------------------------------------------------------------------
// Auth / Users
// ----------------------------------------------------------------------------

Table User {
  id String [pk, default: `gen_random_uuid()`, not null]
  name String [not null, default: 'NO_NAME']
  email String [unique, not null]
  email_verified timestamp
  image text
  password text
  role String [not null, default: 'user']
  address jsonb
  payment_method text
  dni String [unique]
  phone text
  commission_rate float
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp

  Note: 'Usuario del sistema. role puede ser "user", "admin" o "seller"'
}

Table Account {
  user_id String [not null, ref: > User.id]
  type String [not null]
  provider String [not null]
  provider_account_id String [not null]
  refresh_token text
  access_token text
  expires_at integer
  token_type text
  scope text
  id_token text
  session_state text
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp

  indexes {
    (provider, provider_account_id) [pk]
  }
  Note: 'Cuentas OAuth vinculadas a un User (NextAuth)'
}

Table Session {
  session_token String [pk, not null]
  user_id String [not null, ref: > User.id]
  expires timestamp [not null]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp

  Note: 'Sesiones activas de NextAuth'
}

Table VerificationToken {
  identifier String [not null]
  token String [not null]
  expires timestamp [not null]

  indexes {
    (identifier, token) [pk]
  }
  Note: 'Tokens de verificación de email (NextAuth)'
}

Table PasswordResetToken {
  token String [pk, unique, not null]
  email String [not null]
  expires_at timestamp [not null]
  created_at timestamp [not null, default: `now()`]

  Note: 'Tokens de reseteo de contraseña'
}

// ----------------------------------------------------------------------------
// Cart
// ----------------------------------------------------------------------------

Table Cart {
  id String [pk, default: `gen_random_uuid()`, not null]
  user_id String [ref: > User.id]
  session_cart_id String [not null]
  // items: Postgres jsonb[] (array de CartItem)
  items jsonb[] [not null, default: `'{}'::jsonb[]`]
  items_price decimal [not null]
  total_price decimal [not null]
  shipping_price decimal [not null]
  tax_price decimal [not null]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp

  Note: 'Carrito. items es un JSON[] flexible con la forma de CartItem'
}

Table CartRecovery {
  id String [pk, default: `gen_random_uuid()`, not null]
  cart_id String [not null, ref: > Cart.id]
  email String [not null]
  token String [unique, not null]
  sent_at timestamp [not null, default: `now()`]
  recovered_at timestamp
  created_at timestamp [not null, default: `now()`]

  Note: 'Recuperación de carritos abandonados (token por email)'
}

// ----------------------------------------------------------------------------
// Promo / Marketing
// ----------------------------------------------------------------------------

Table PromoBanner {
  id String [pk, default: `gen_random_uuid()`, not null]
  image text [not null]
  title String [not null]
  subtitle text
  link_label text
  discount_percent float
  order integer [not null, default: 0]
  is_active boolean [not null, default: true]
  starts_at timestamp
  ends_at timestamp
  created_at timestamp [not null, default: `now()`]

  Note: 'Banners promocionales del home'
}

Table PromoCode {
  id String [pk, default: `gen_random_uuid()`, not null]
  code String [unique, not null]
  description text
  discount_percent_mercado_pago decimal
  discount_percent_transferencia decimal
  is_active boolean [not null, default: true]
  starts_at timestamp
  ends_at timestamp
  max_uses_per_user integer
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  Note: 'Cupones de descuento. Ya viene con % separado por método de pago (MercadoPago vs Transferencia)'
}

Table PromoCodeUsage {
  id String [pk, default: `gen_random_uuid()`, not null]
  promo_code_id String [not null, ref: > PromoCode.id]
  user_id String [not null, ref: > User.id]
  order_id String [not null, ref: > Order.id]
  used_at timestamp [not null, default: `now()`]

  Note: 'Histórico de uso de cupones (1 fila por (cupón, orden))'
}

// ----------------------------------------------------------------------------
// Orders
// ----------------------------------------------------------------------------

Table Order {
  id String [pk, default: `gen_random_uuid()`, not null]
  user_id String [not null, ref: > User.id]
  shipping_address jsonb [not null]
  payment_method String [not null]
  payment_result jsonb
  items_price decimal [not null]
  shipping_price decimal [not null]
  tax_price decimal [not null]
  total_price decimal [not null]
  promo_code text
  discount_price decimal
  banner_id String [ref: > PromoBanner.id]
  banner_discount decimal
  is_paid boolean [not null, default: false]
  paid_at timestamp
  is_delivered boolean [not null, default: false]
  delivered_at timestamp
  shipping_status text [default: 'Pendiente']
  shipping_notes text
  created_at timestamp [not null, default: `now()`]
  receipt_url text
  mp_payment_id String [unique]
  expires_at timestamp
  seller_id String [ref: > User.id]
  commission_amount decimal

  Note: 'Orden. payment_method se snapshotea del user al crear. shipping_status default "Pendiente"'
}

Table OrderItem {
  id String [pk, default: `gen_random_uuid()`, not null]
  order_id String [not null, ref: > Order.id]
  product_id String [not null, ref: > Product.id]
  size text
  // Fase 1: snapshot del color elegido
  product_color_id text
  color_name text
  color_hex text
  qty integer [not null]
  // Fase 2: precio final aplicado al item (según método de pago elegido en checkout).
  // Reemplaza al viejo `price`.
  price_used decimal [not null]
  // Fase 2: método de pago del que se derivó `priceUsed` (audit trail).
  payment_method PaymentMethod [not null]
  name String [not null]
  slug String [not null]
  image text [not null]

  indexes {
    (order_id, product_id, size, product_color_id) [unique, name: 'orderitems_order_product_size_idx']
  }
  Note: 'Línea de orden. price_used + payment_method + size + color se snapshotean del cart para historia'
}

// ----------------------------------------------------------------------------
// Reviews
// ----------------------------------------------------------------------------

Table Review {
  id String [pk, default: `gen_random_uuid()`, not null]
  user_id String [not null, ref: > User.id]
  product_id String [not null, ref: > Product.id]
  rating integer [not null]
  title String [not null]
  description text [not null]
  is_verified_purchase boolean [not null, default: true]
  created_at timestamp [not null, default: `now()`]

  Note: 'Reseñas de productos (1..5 estrellas)'
}

// ----------------------------------------------------------------------------
// Settings (key-value)
// ----------------------------------------------------------------------------

Table Setting {
  key String [pk, not null]
  value text [not null]

  Note: 'Settings globales del sistema (envío gratis, datos bancarios, MP, etc.)'
}
